...
"ok" = "Ok";

"cancel" = "Cancel";

"loading" = "Loading…";

"next" = "Next";

"new" = "New";

"skip" = "Skip";

"edit" = "Edit";

"done" = "Done";

"add" = "Add";

"remove" = "Remove";

"close" = "Close";
...
"help" = "Help";

"updateNow" = "Update Now";

"later" = "Later";

"settings" = "Settings";

"yourAccount" = "Your Account";

"resendCode" = "Resend code";

"toastSettingsLocationDisabled" = "Volvo Valet Agent does not function properly with location services disabled.";

"requestReset" = "Request was reset.";
...
"confirmNewPassword" = "Confirm New Password";

"passwordRequirements" = "Password must have at least one letter and one digit, at least 8 chars, less than 60";

"openSettings" = "Open Settings";

"back" = "Back";

"inspectVehicles" = "Inspect Vehicles";

"inspectVehicle" = "Inspect Vehicle";

"exchangeKeys" = "Exchange Keys";
...

/* Popups */
"popupPhoneVerificationResendCodeTitle" = "New confirmation code sent";

"popupPhoneVerificationResendCodeMessage" = "We sent a 4 digit confirmation code to %@";

"popupAddNewLocationLabel" = "Address for Pickup";

"popupUpdatingLocation" = "Updating Location...";

"popupSelectTimeSlotUnavailableCallDealership" = "Call Dealership";

"popupSoftUpgradeNegative" = "Later";
...
"viewPhoneAdd" = "Add Phone Number";

"viewPhoneAddLabel" = "Let’s verify your phone number.";

"viewProfileChangeContact" = "Contact Information";

"viewProfileChangePasswordTemp" = "name@domain.com";

"viewReceiveVehicle" = "Receive Vehicle";

"viewReceiveVehicleLoaner" = "Receive Loaner";

"viewReceiveVehicleInfoReminder" = "Remind %@ to remove belongings from the loaner and sign paperwork.";
...
"viewSignin" = "Sign-In";

"viewSigninEmailInvalid" = "Email address is not valid";

"viewSigninPasswordShort" = "Password must have at least one letter and one digit, at least 8 chars, less than 60";

"viewSigninActionSignin" = "SIGN-IN";

"viewSigninForgotPassword" = "FORGOT YOUR PASSWORD?";

"viewSigninPopupProgressSignin" = "Signing in…";

"viewSigninPhoto" = "Photograph Yourself";
...
