...
            make.leading.equalToSuperview().inset(20)
            make.top.equalToSuperview().inset(200)
            make.trailing.equalToSuperview().inset(20)
            make.height.equalTo(VLVerticalTextField.verticalHeight)
        }

        let luxePasswordField = VLVerticalTextField(title: "Password", placeholder: "••••••••")
        luxePasswordField.textField.autocorrectionType = .no
        luxePasswordField.textField.isSecureTextEntry = true
        luxePasswordField.textField.returnKeyType = .done
        luxePasswordField.showLabels()
        if #available(iOS 11.0, *) {
            luxePasswordField.textField.textContentType = .password
...
