...
        let headerView = UIView()
        headerView.backgroundColor = UIColor.luxeCharcoalGrey()
        headerView.clipsToBounds = true
        return headerView
    }()
    
    let bottomButton: VLButton

    init(title: String, buttonTitle: String, screen: AnalyticsEnums.Name.Screen) {
        self.screen = screen
        self.baseHeight = VLPresentrViewController.minHeight + VLPresentrViewController.safeAreaBottomHeight()
        bottomButton = VLButton(type: .bluePrimary, title: nil, kern: UILabel.uppercasedKern(), event: .next, screen: screen)
        super.init(nibName: nil, bundle: nil)
...
